Inclusion of a image of the mesh

--- a/data_set/Mesh/Maillage_dataset.ipynb
+++ b/data_set/Mesh/Maillage_dataset.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
    "source": [
     "plt.figure()\n",
     "plt.scatter(np.concatenate((earth_long/111000,maritime_long/111000)), np.concatenate((earth_lat/111000,maritime_lat/111000)), c=np.concatenate((earth_depth/30,maritime_depth/30)), cmap=\"jet\",linewidths=0.0000005)\n",
-    "plt.clim(vmin=-30,vmax=50)\n",
+    "plt.clim(vmin=-np.min(maritime_depth),vmax=np.max(earth_depth))\n",
     "plt.colorbar()\n",
     "plt.savefig(\"Topo_Mar_data.png\")\n",
     "plt.show()"
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,12 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "points = np.array([long,lat,depth]).T\n",
-    "points=smooth_grid(points)"
+    "points=smooth_grid(points,15)"
    ]
   },
   {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
      "output_type": "stream",
      "text": [
       "Number of points 138317\n",
-      "Number of cells 275440\n"
+      "Number of cells 275177\n"
      ]
     }
    ],
@@ -323,7 +323,7 @@
     "import pyvista as pv\n",
     "\n",
     "cloud = pv.PolyData(points)\n",
-    "grid = cloud.delaunay_2d(alpha=2500)   # We use the Delaunay method to make the mesh\n",
+    "grid = cloud.delaunay_2d(alpha=3000)   # We use the Delaunay method to make the mesh\n",
     "print(\"Number of points\",grid.number_of_points)\n",
     "print(\"Number of cells\",grid.number_of_cells)"
    ]
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,17 +354,17 @@
    "source": [
     "import vtk\n",
     "colors = vtk.vtkIntArray()\n",
-    "colors.SetName(\"Cell_colors\")\n",
-    "cells_color=[]\n",
+    "colors.SetName(\"Depth\")\n",
+    "depth_scale=[]\n",
     "for i in range(grid.number_of_cells):\n",
     "    cell=grid.cell_points(i)\n",
     "    sum=0\n",
     "    for j in range(len(cell)):\n",
     "        sum+=cell[j][2]\n",
     "    sum=int(sum/len(cell))\n",
-    "    cells_color.append(sum)\n",
+    "    depth_scale.append(sum)\n",
     "\n",
-    "for t in cells_color:\n",
+    "for t in depth_scale:\n",
     "    colors.InsertNextValue(int(t))\n",
     "grid.GetCellData().SetScalars(colors)\n",
     "#grid.GetPointData().SetScalars(colors)"
@@ -379,13 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9549809e9bb644e09a91b053be2ae826",
+       "model_id": "186a33d47b534de59e9680d547c9600c",
        "version_major": 2,
        "version_minor": 0
       },
