Inclusion of a image of the mesh

--- a/data_set/Mesh/Maillage_dataset.ipynb
+++ b/data_set/Mesh/Maillage_dataset.ipynb
@@ -97,7 +97,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot data sets"
+    "# Plot data sets\n",
+    "# depth scale on the plots -> 1:50"
    ]
   },
   {
