Inclusion of a image of the mesh

--- a/data_set/Mesh/Maillage_dataset.ipynb
+++ b/data_set/Mesh/Maillage_dataset.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -254,15 +254,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "def smooth_grid(points,k_neigh=7):\n",
-    "    points = points[points[:, 1].argsort()]\n",
-    "    points = points[points[:, 0].argsort(kind='mergesort')]\n",
+    "    #points = points[points[:, 1].argsort()]\n",
+    "    #points = points[points[:, 0].argsort(kind='mergesort')]\n",
     "\n",
     "    new_long=[]\n",
     "    new_lat=[]\n",
@@ -296,7 +296,7 @@
    "outputs": [],
    "source": [
     "points = np.array([long,lat,depth]).T\n",
-    "points=smooth_grid(points,15)"
+    "points=smooth_grid(points,25)"
    ]
   },
   {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
      "output_type": "stream",
      "text": [
       "Number of points 138317\n",
-      "Number of cells 275177\n"
+      "Number of cells 275183\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
     "    depth_scale.append(sum)\n",
     "\n",
     "for t in depth_scale:\n",
-    "    colors.InsertNextValue(int(t))\n",
+    "    colors.InsertNextValue(t)\n",
     "grid.GetCellData().SetScalars(colors)\n",
     "#grid.GetPointData().SetScalars(colors)"
    ]
@@ -380,13 +380,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "186a33d47b534de59e9680d547c9600c",
+       "model_id": "f95d5a26b6b24851990b391a0f229560",
        "version_major": 2,
        "version_minor": 0
       },
