--- a/data_set/Mesh/Maillage_dataset.ipynb
+++ b/data_set/Mesh/Maillage_dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a mesh using a dataset"
+    "# Create a mesh from a dataset"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process datas\n",
+    "## Data processing\n",
     "Transform csv data to numpy arrays to be plotted\n",
     "\n",
     "Correct for real maximum water depth (opposite of dataset depth)"
@@ -97,8 +97,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot data sets\n",
-    "# depth scale on the plots -> 1:1"
+    "# Plot datasets\n",
+    "# Depth scale on the plots -> 1:1"
    ]
   },
   {
@@ -207,14 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Select the data set to make the mesh and makes it smooth "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Select the data set \n"
+    "# Select dataset"
    ]
   },
   {
@@ -249,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Utilisation of the k-nearest neighbors and its depth average to make the data set smooth"
+    "# Utilisation of k-nearest neighbors algorithme and its average depth to make the dataset more smooth"
    ]
   },
   {
@@ -303,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating the Mesh"
+    "## Mesh creation"
    ]
   },
   {
@@ -332,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coloring the cells and points\n",
+    "# Coloring cells and points\n",
     "# Depth scale -> 1:1\n"
    ]
   },
@@ -400,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot and save in a vtk file"
+    "# Plot and save to vtk file"
    ]
   },
   {
