--- a/rapports/Polynomes.tex
+++ b/rapports/Polynomes.tex
@@ -141,7 +141,7 @@
 		\item \texttt{patience}: integer setting how many epoch loops the system can go on without progressing, after that the trial is ended
 	\end{itemize}
 	
-	Some work must still be done to assure a low validation error with minimal cost of time and hardware. A few bugs impeding a proper convergence seems to still persist in some of our implementations.
+	An automatization of the hypertuning by hand and using Keras Tuner has already been led. Nevertheless, some work must still be done to assure a low validation error with minimal cost of time and hardware. A few bugs, impeding a proper convergence, also seems to persist in some of our implementations.
 	
 	
 	
