Solution of the PDE 5 and 7

--- a/Neural_Networks/Jax/Poisson/NN_Jax_Poisson.ipynb
+++ b/Neural_Networks/Jax/Poisson/NN_Jax_Poisson.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving PDEs with Jax\n",
+    "# Solving PDEs with Jax - Poisson equation\n",
     "\n",
     "This file contains our first approach to solve PDEs with neural networks on Jax Library.  \n",
     "\n",
@@ -197,8 +197,8 @@
     "    # Definition of the function F(x,y) mentioned above   \n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def F_function(self,inputX,inputY):\n",
-    "        F1=jnp.multiply(jnp.sin(inputX),jnp.sin(inputX-jnp.ones_like(inputX))).reshape((-1,1))\n",
-    "        F2=jnp.multiply(jnp.sin(inputY),jnp.sin(inputY-jnp.ones_like(inputY))).reshape((-1,1))\n",
+    "        F1=jnp.multiply(jnp.sin(inputX),jnp.sin(inputX-jnp.ones_like(inputX)))\n",
+    "        F2=jnp.multiply(jnp.sin(inputY),jnp.sin(inputY-jnp.ones_like(inputY)))\n",
     "        return jnp.multiply(F1,F2).reshape((-1,1))\n",
     "\n",
     "    # Definition of the function f(x,y) mentioned above   \n",
@@ -213,7 +213,7 @@
     "        NN = vmap(partial(jit(self.NN_evaluation), params))(inputs)\n",
     "        F=self.F_function(inputX,inputY)\n",
     "        A=self.A_function(inputX,inputY)\n",
-    "        return jnp.add(jnp.multiply(F,NN),A)\n",
+    "        return jnp.add(jnp.multiply(F,NN),A).reshape(-1,1)\n",
     "\n",
     "    # Compute the loss function\n",
     "    @partial(jit, static_argnums=(0,))    \n",
