Solution of the PDE 6

--- a/Neural_Networks/Jax/Poisson/NN_Jax_Poisson.ipynb
+++ b/Neural_Networks/Jax/Poisson/NN_Jax_Poisson.ipynb
@@ -4,20 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving PDEs with Jax - Poisson equation\n",
-    "\n",
+    "# Solving PDEs with Jax - Poisson\n",
+    "## Description\n",
     "This file contains our first approach to solve PDEs with neural networks on Jax Library.  \n",
+    "### Average time of execution \n",
+    "# Average time of execution \n",
+    "Between 2 and 3 minutes on GPU\n",
     "\n",
+    "### PDE\n",
     "We will try to solve the poisson Equation :  \n",
     "$-\\Delta \\psi(x,y) = f(x,y)$ on $\\Omega = [0,1]^2$  \n",
-    "With Dirichlet homogeneous boundary conditions $\\psi|_{\\partial \\Omega}=0$ and $f(x, y)=2\\pi^2 sin(\\pi x) sin(\\pi y)$\n",
     "\n",
+    "### Boundary conditions   \n",
+    "$\\psi|_{\\partial \\Omega}=0$ and $f(x, y)=2\\pi^2 sin(\\pi x) sin(\\pi y)$\n",
+    "\n",
+    "### Loss function\n",
     "The loss to minimize here is $\\mathcal{L} = ||\\Delta \\psi(x,y) + f(x,y)||_2$  \n",
+    "\n",
+    "### Analytical solution\n",
     "The true function $\\psi$ should be $\\psi(x, y)=sin(\\pi x) sin(\\pi y)$\n",
     "\n",
+    "### Approximated solution\n",
     "We want find a solution $\\psi(x,y)=F(x,y)N(x,y)+A(x,y)$ s.t:  \n",
-    "$A=0$   \n",
-    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$"
+    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$  \n",
+    "$A(x,y)=0$   \n"
    ]
   },
   {
@@ -48,7 +58,7 @@
     "import numpy as np\n",
     "import os\n",
     "import pickle\n",
-    "#print(xla_bridge.get_backend().platform)"
+    "print(xla_bridge.get_backend().platform)"
    ]
   },
   {
@@ -499,8 +509,8 @@
     }
    ],
    "source": [
-    "def true_solution(X):\n",
-    "    return jnp.sin(jnp.pi*X[:,0])*jnp.sin(jnp.pi*X[:,1])\n",
+    "def true_solution(inputs):\n",
+    "    return jnp.sin(jnp.pi*inputs[:,0])*jnp.sin(jnp.pi*inputs[:,1])\n",
     "\n",
     "plt.figure()\n",
     "n_points=100000\n",
