--- a/Neural_Networks/Jax/Problem_5/NN_Jax_PDE5.ipynb
+++ b/Neural_Networks/Jax/Problem_5/NN_Jax_PDE5.ipynb
@@ -5,23 +5,30 @@
    "metadata": {},
    "source": [
     "# Solving PDEs with Jax - Problem 5\n",
+    "## Description\n",
     "\n",
-    "This file contains our first approach to solve PDEs with neural networks on Jax Library.  \n",
+    "### Average time of execution \n",
+    "Between 2 and 3 minutes on GPU\n",
     "\n",
-    "We will try to solve the PDE :  \n",
-    "$\\Delta \\psi(x,y)= f(x,y)$ on $\\Omega = [0,1]^2$  where $f(x, y)=e^{-x}(x-2+y^3+6y)$   \n",
-    "(Problem 5 of the article https://ieeexplore.ieee.org/document/712178)\n",
+    "### PDE\n",
+    "We will try to solve the problem 5 of the article https://ieeexplore.ieee.org/document/712178:  \n",
     "\n",
-    "With mixeds boundary conditions :   \n",
+    "$\\Delta \\psi(x,y)= f(x,y)$ on $\\Omega = [0,1]^2$   \n",
+    "with $f(x, y)=e^{-x}(x-2+y^3+6y)$   \n",
+    "\n",
+    "### Boundary conditions   \n",
     "$\\psi(0,y)=y^3$,$\\psi(1,y)=(1+y^3)e^{-1}$,$\\psi(x,0)=xe^{-x}$ and $\\psi(x,1)=e^{-x}(x+1)$           \n",
     "\n",
+    "### Loss function\n",
     "The loss to minimize here is $\\mathcal{L} = ||\\Delta \\psi(x,y)-f(x,y) ||_2$  \n",
+    "\n",
+    "### Analytical solution\n",
     "The true function $\\psi$ should be $\\psi(x, y)=e^{-x}(x+y^3)$\n",
     "\n",
-    "We want find a solution $\\psi(x,y)=A(x,y)+F(x,y)N(x,y)$\n",
-    "s.t:  \n",
-    "$A=(1-x)y^3+x(1+y^3)e^{-1}+(1-y)x(e^{-x}-e^{-1})+y[(1+x)e^{-x}-(1-x+2xe^{-1})]$   \n",
-    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$"
+    "### Approximated solution\n",
+    "We want find a solution $\\psi(x,y)=A(x,y)+F(x,y)N(x,y)$ s.t:  \n",
+    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$  \n",
+    "$A(x,y)=(1-x)y^3+x(1+y^3)e^{-1}+(1-y)x(e^{-x}-e^{-1})+y[(1+x)e^{-x}-(1-x+2xe^{-1})]$   \n"
    ]
   },
   {
@@ -52,7 +59,7 @@
     "import numpy as np\n",
     "import os\n",
     "import pickle\n",
-    "#print(xla_bridge.get_backend().platform)"
+    "print(xla_bridge.get_backend().platform)"
    ]
   },
   {
@@ -508,8 +515,8 @@
     }
    ],
    "source": [
-    "def true_solution(X):\n",
-    "    return jnp.multiply(jnp.exp(-X[:,0]),X[:,0]+X[:,1]**3)\n",
+    "def true_solution(inputs):\n",
+    "    return jnp.multiply(jnp.exp(-inputs[:,0]),inputs[:,0]+inputs[:,1]**3)\n",
     "    \n",
     "plt.figure()\n",
     "n_points=100000\n",
