--- a/Neural_Networks/Jax/Problem_8/NN_Jax_PDE8.ipynb
+++ b/Neural_Networks/Jax/Problem_8/NN_Jax_PDE8.ipynb
@@ -5,24 +5,32 @@
    "metadata": {},
    "source": [
     "# Solving PDEs with Jax - Problem 8\n",
+    "## Description\n",
     "\n",
-    "This file contains our first approach to solve PDEs with neural networks on Jax Library.  \n",
+    "### Average time of execution \n",
+    "Between 2 and 3 minutes on GPU\n",
     "\n",
-    "We will try to solve the PDE :  \n",
+    "### PDE\n",
+    "We will try to solve the problem 8 of the article https://ieeexplore.ieee.org/document/712178:  \n",
+    "\n",
     "$\\Delta \\psi(x,y) +\\psi(x,y)\\cdot\\frac{\\partial \\psi(x,y)}{\\partial y}= f(x,y)$ on $\\Omega = [0,1]^2$  \n",
     "where $f(x, y)=\\sin(\\pi x)(2-\\pi^2y^2+2y^3\\sin(\\pi x))$   \n",
-    "(Problem 8 of the article https://ieeexplore.ieee.org/document/712178)\n",
     "\n",
-    "With mixeds boundary conditions :   \n",
+    "### Boundary conditions    \n",
     "$\\psi(0,y)=\\psi(1,y)=\\psi(x,0)=0$ and $\\frac{\\partial \\psi}{\\partial y}(x,1)=2\\sin(\\pi x)$           \n",
     "\n",
+    "### Loss function\n",
     "The loss to minimize here is $\\mathcal{L} = ||\\Delta \\psi(x,y) +\\psi(x,y)\\cdot\\frac{\\partial \\psi(x,y)}{\\partial y}-f(x,y) ||_2$  \n",
-    "The true function $\\psi$ should be $\\psi(x, y)=y^2sin(\\pi x)$\n",
     "\n",
+    "### Analytical solution\n",
+    "The true function $\\psi$ should be $\\psi(x, y)=y^2sin(\\pi x)$  \n",
+    "This solution is the same of the problem 7\n",
+    "\n",
+    "### Approximated solution\n",
     "We want find a solution $\\psi(x,y)=A(x,y)+F(x,y)N(x,y)$\n",
     "s.t:  \n",
-    "$A=y\\sin(\\pi x)$   \n",
-    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$"
+    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$ \n",
+    "$A(x,y)=y\\sin(\\pi x)$   \n"
    ]
   },
   {
@@ -53,7 +61,7 @@
     "import numpy as np\n",
     "import os\n",
     "import pickle\n",
-    "#print(xla_bridge.get_backend().platform)"
+    "print(xla_bridge.get_backend().platform)"
    ]
   },
   {
@@ -507,8 +515,8 @@
     }
    ],
    "source": [
-    "def true_solution(X):\n",
-    "    return jnp.multiply(X[:,1]**2,jnp.sin(jnp.pi*X[:,0]))\n",
+    "def true_solution(inputs):\n",
+    "    return jnp.multiply(inputs[:,1]**2,jnp.sin(jnp.pi*inputs[:,0]))\n",
     "    \n",
     "plt.figure()\n",
     "n_points=100000\n",
