--- a/Neural_Networks/Jax/Problem_7/NN_Jax_PDE7.ipynb
+++ b/Neural_Networks/Jax/Problem_7/NN_Jax_PDE7.ipynb
@@ -5,24 +5,30 @@
    "metadata": {},
    "source": [
     "# Solving PDEs with Jax - Problem 7\n",
+    "## Description\n",
     "\n",
-    "This file contains our first approach to solve PDEs with neural networks on Jax Library.  \n",
+    "### Average time of execution \n",
+    "Between 2 and 3 minutes on GPU\n",
     "\n",
-    "We will try to solve the PDE :  \n",
+    "### PDE\n",
+    "We will try to solve the problem 7 of the article https://ieeexplore.ieee.org/document/712178:  \n",
     "$\\Delta \\psi(x,y) = f(x,y)$ on $\\Omega = [0,1]^2$  \n",
     "where $f(x, y)=(2-\\pi^2y^2)\\sin(\\pi x)$   \n",
-    "(Problem 7 of the article https://ieeexplore.ieee.org/document/712178)\n",
     "\n",
-    "With mixeds boundary conditions :   \n",
+    "### Boundary conditions     \n",
     "$\\psi(0,y)=\\psi(1,y)=\\psi(x,0)=0$ and $\\frac{\\partial \\psi}{\\partial y}(x,1)=2\\sin(\\pi x)$           \n",
     "\n",
+    "### Loss function\n",
     "The loss to minimize here is $\\mathcal{L} = ||\\Delta \\psi(x,y)-f(x,y) ||_2$  \n",
+    "\n",
+    "### Analytical solution\n",
     "The true function $\\psi$ should be $\\psi(x, y)=y^2sin(\\pi x)$\n",
     "\n",
+    "### Approximated solution\n",
     "We want find a solution $\\psi(x,y)=A(x,y)+F(x,y)N(x,y)$\n",
     "s.t:  \n",
-    "$A=y\\sin(\\pi x)$   \n",
-    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$"
+    "$F(x,y)=\\sin(x-1)\\sin(y-1)\\sin(x)\\sin(y)$  \n",
+    "$A(x,y)=y\\sin(\\pi x)$   \n"
    ]
   },
   {
@@ -512,8 +518,8 @@
     }
    ],
    "source": [
-    "def true_solution(X):\n",
-    "    return jnp.multiply(X[:,1]**2,jnp.sin(jnp.pi*X[:,0]))\n",
+    "def true_solution(inputs):\n",
+    "    return jnp.multiply(inputs[:,1]**2,jnp.sin(jnp.pi*inputs[:,0]))\n",
     "    \n",
     "plt.figure()\n",
     "n_points=100000\n",
