--- a/Mesh/Mesh_generator.ipynb
+++ b/Mesh/Mesh_generator.ipynb
@@ -131,7 +131,7 @@
     "plt.scatter(maritime_long/111000, maritime_lat/111000, c=maritime_depth/30, cmap=\"jet\",linewidths=0.0000005)\n",
     "plt.clim(vmin=np.min(maritime_depth/30),vmax=np.max(earth_depth/30))\n",
     "plt.colorbar()\n",
-    "plt.savefig(\"Mar_data.png\")\n",
+    "plt.savefig(\"Images/Mar_data.png\")\n",
     "plt.show()"
    ]
   },
@@ -165,7 +165,7 @@
     "plt.scatter(earth_long/111000, earth_lat/111000, c=earth_depth/30, cmap=\"jet\",linewidths=0.0000005)\n",
     "plt.clim(vmin=np.min(maritime_depth)/30,vmax=np.max(earth_depth)/30)\n",
     "plt.colorbar()\n",
-    "plt.savefig(\"Topo_data.png\")\n",
+    "plt.savefig(\"Images/Topo_data.png\")\n",
     "plt.show()\n"
    ]
   },
@@ -199,7 +199,7 @@
     "plt.scatter(np.concatenate((earth_long/111000,maritime_long/111000)), np.concatenate((earth_lat/111000,maritime_lat/111000)), c=np.concatenate((earth_depth/30,maritime_depth/30)), cmap=\"jet\",linewidths=0.0000005)\n",
     "plt.clim(vmin=int(np.min(maritime_depth)/30),vmax=int(np.max(earth_depth)/30))\n",
     "plt.colorbar()\n",
-    "plt.savefig(\"Topo_Mar_data.png\")\n",
+    "plt.savefig(\"Images/Topo_Mar_data.png\")\n",
     "plt.show()"
    ]
   },
@@ -418,7 +418,7 @@
    ],
    "source": [
     "grid.plot(show_edges=True)\n",
-    "grid.save('mesh.vtk')"
+    "grid.save('mesh_arcachon.vtk')"
    ]
   }
  ],
