--- a/Neural_Networks/Jax/Problem_5/NN_Jax_PDE5.ipynb
+++ b/Neural_Networks/Jax/Problem_5/NN_Jax_PDE5.ipynb
@@ -11,7 +11,7 @@
     "Between 2 and 3 minutes on GPU\n",
     "\n",
     "### PDE\n",
-    "We will try to solve the problem 5 of the article https://ieeexplore.ieee.org/document/712178:  \n",
+    "We will try to solve the problem 5 of the article https://ieeexplore.ieee.org/document/712178  \n",
     "\n",
     "$\\Delta \\psi(x,y)= f(x,y)$ on $\\Omega = [0,1]^2$   \n",
     "with $f(x, y)=e^{-x}(x-2+y^3+6y)$   \n",
