--- a/Neural_Networks/Jax/Problem_6/NN_Jax_PDE6.ipynb
+++ b/Neural_Networks/Jax/Problem_6/NN_Jax_PDE6.ipynb
@@ -11,7 +11,7 @@
     "Between 3 and 4 minutes on GPU\n",
     "\n",
     "### PDE\n",
-    "We will try to solve the problem 6 of the article https://ieeexplore.ieee.org/document/712178:  \n",
+    "We will try to solve the problem 6 of the article https://ieeexplore.ieee.org/document/712178  \n",
     "\n",
     "$\\Delta \\psi(x,y) = f(x,y)$ on $\\Omega = [0,1]^2$  \n",
     "with $f(x, y)=e^{-\\frac{ax+y}{5}}\\{[-\\frac{4}{5}a^3x-\\frac{2}{5}+2a^2]\\cos(a^2x^2+y)+[\\frac{1}{25}-1-4a^4x^2+\\frac{a^2}{25}]\\sin(a^2x^2+y)\\}$   \n",
