--- a/Neural_Networks/Jax/Problem_7/NN_Jax_PDE7.ipynb
+++ b/Neural_Networks/Jax/Problem_7/NN_Jax_PDE7.ipynb
@@ -11,7 +11,7 @@
     "Between 2 and 3 minutes on GPU\n",
     "\n",
     "### PDE\n",
-    "We will try to solve the problem 7 of the article https://ieeexplore.ieee.org/document/712178:  \n",
+    "We will try to solve the problem 7 of the article https://ieeexplore.ieee.org/document/712178  \n",
     "$\\Delta \\psi(x,y) = f(x,y)$ on $\\Omega = [0,1]^2$  \n",
     "where $f(x, y)=(2-\\pi^2y^2)\\sin(\\pi x)$   \n",
     "\n",
