--- a/Neural_Networks/Jax/Problem_8/NN_Jax_PDE8.ipynb
+++ b/Neural_Networks/Jax/Problem_8/NN_Jax_PDE8.ipynb
@@ -11,7 +11,7 @@
     "Between 2 and 3 minutes on GPU\n",
     "\n",
     "### PDE\n",
-    "We will try to solve the problem 8 of the article https://ieeexplore.ieee.org/document/712178:  \n",
+    "We will try to solve the problem 8 of the article https://ieeexplore.ieee.org/document/712178  \n",
     "\n",
     "$\\Delta \\psi(x,y) +\\psi(x,y)\\cdot\\frac{\\partial \\psi(x,y)}{\\partial y}= f(x,y)$ on $\\Omega = [0,1]^2$  \n",
     "where $f(x, y)=\\sin(\\pi x)(2-\\pi^2y^2+2y^3\\sin(\\pi x))$   \n",
